k8s/jerney.yaml
# namespace for jerney application
apiVersion: v1
kind: Namespace
metadata:
 name: jerney
 labels: 
  app.kubernetes.io/part-of: jerney 

# secrets for db's credentials
apiVersion: v1
kind: Secrets
metadata:
 namespace: jerney-db-secret
 labels:
  app.kubernetes.io/part-of: jerney
type: Opaque
data:
 POSTGRES_USER: amVybmV5X3VzZXI=
 POSTGRES_PASSWORD: amVybmV5X3Bhc3NfMjAyNg==
 POSTGRES_DB: amVybmV5X2Ri

#storage for db
apiVersion: storage.k8s.io/v1
kind: StorageClass
metadata:
 name: jerney-ebs-sc
 labels:
  app.kubernetes.io/part-of: jerney
provisioners: ebs.csi.eks.amazonaws.com
allowVolumeExpansion: true
volumeBindingMode: WaitFortheFirstConsumer
parameters:
 type: gp3
 encrypted: "true"
reclaimPolicy: retain


# persitent volume claim for db
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
 name: jerney-db-pvc
 namespace: jerney
 labels:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: jerney-db
spec:
 accessModes:
  - ReadWriteOnce
 storageClassName: jerney-ebs-sc
 resources:
   requests:
    storage: "10Gi"

# deployment for db
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jerney-db-deployment
 namespace: jerney-db-deployment
 labels:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: database
  app.kubernetes.io/name: jerney-db
spec:
 replicas: 1
 strategy:
  type: recreate
 selector:
  matchLables:
   app.kubernetes.io/name: jerney-db
 template:
  metadata:
   labels: 
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
    app.kubernetes.io/name: jerney-db
  spec:
    automountServiceAccountToken: false
    tolerations:
    - key: karpenter.sh/disrupted
      operator: Exists
      effect: NoSchedule
    containers:
     - name: postgress
       image: postgress-16:alpine 
       ports:
        - containerPort: 5432 
          protocol: TCP
       volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
          subPath: pgdata
       resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          cpu: 500m
          memory: 512Mi
       livenessProbe:
        exec:
         command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
        initialDelaySeconds: 15
        periodSeconds: 10
        timeoutSeconds: 5
       readinessProbe:
        exec:
         command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 3
       securityContext:
        allowPrivilageEscalation: false
        runAsNonrootUser: false
        readOnlyRootFileSystem: false
    volumes:
    - name: db-storage
      persistentVolumeClaim:
       claimName: jerney-db-pvc
# service for db
apiVersion: v1
kind: Service
metadata:
 name: jerney-db-svc
 namespace: jerney-db-svc
 labels:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: database
  app.kubernetes.io/name: jerney-db
spec:
 selector:
  labels:
   app.kubernetes.io/name: jerney-db
 type: ClusterIp
 ports:
  - targetPort: 5432
    port: 5432
    protocol: TCP

# deployment for backend application
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jerney-backend
 namespace: jerney
 labels:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: backend
  app.kuberenetes.io/name: jerney-backend
spec:
 replicas: 2
 selector:
  matchLables:
   app.kuberenetes.io/name: jerney-backend
 template:
  metadata:
   labels:
    app.kuberenetes.io/name: jerney-backend
  spec:
   automountServiceAccountToken: false
   tolerations:
    - key: karpenter.sh/disrupted
      operator: Exists
      effect: NoSchedule
   containers:
    containers:
    - name: backend
      image: ghcr.io/iam-veeramalla/Jerney/jerney-backend:75da1da
      ports:
      - containerPort: 5000
        port: 5000
        protocol: TCP
      resources:
        requests:
         cpu: 100m
         memory: 128Mi
        limits:
         cpu: 300m
         memory: 256Mi
      securityContext:
       allowPrivilegeEscalation: false
       runAsNonRootUser: true
       readOnlyRootFileSystem: true
       runAsUser: 1000
       capabilites:
        drop:
         - ALL
      livenessProbes:
        httpGet: 
         path: /api/health
         port: 5000
        initialDelaySeconds: 15
        periodSeconds: 10
        timeoutSeconds: 5
      readinessProbe:
       httpGet:
        path: /api/health
        port: 5000
       initialDelaySeconds: 5
       periodSeconds: 5
       timeoutSeconds: 3
# service for backend application
apiVersion: v1
kind: Service
metadata:
 name: jerney-backend-svc
 namespace: jerney
 lables:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: backend
spec:
 selector:
  lables:
   app.kuberenetes.io/name: jerney-backend
 type: NodePort
 ports:
  - targetPort: 5000
    port: 5000
    protocol: TCP
#deployment for frontend application buy
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jerney-frontend
 namespace: jerney
 labels:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: frontend
  app.kuberenetes.io/name: jerney-frontend
spec:
 replicas: 2
 selector:
  matchLables:
   app.kuberenetes.io/name: jerney-frontend
 template:
  metadata:
   labels:
    app.kuberenetes.io/name: jerney-frontend
  spec:
   automountServiceAccountToken: false
   tolerations:
    - key: karpenter.sh/disrupted
      operator: Exists
      effect: NoSchedule
   containers:
    - name: frontend
      image: ghcr.io/iam-veeramalla/Jerney/jerney-frontend:75da1da
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        requests:
         cpu: 50m
         memory: 64Mi
        limits:
         cpu: 100m
         memory: 128Mi
      securityContext:
       allowPrivilegeEscalation: false
       runAsNonRootUser: true
       readOnlyRootFileSystem: false
       runAsUser: 101
       capabilites:
        drop:
         - AL
      livenessProbe:
       httpGet:
        path: /api/health
        port: 8080
       initialDelaySeconds: 5
       periodSeconds: 10
      readinessProbe:
       httpGet:
        path: /api/health
        port: 8080
       initialDelaySeconds: 3
       periodSeconds: 5
# service for frontend application
apiVersion: v1
kind: Service
metadata:
 name: jerney-frontend-svc
 namespace: jerney
 lables:
  app.kubernetes.io/part-of: jerney
  app.kubernetes.io/component: frontend
spec:
 selector:
  lables:
   app.kuberenetes.io/name: jerney-frontend
 type: NodePort
 ports:
  - targetPort: 8080
    port: 8080
    protocol: TCP
#network policy to allow traffic from frontend to backend and backend to db
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: jerney-db-allow- jerney-backend
 namespace: jerney
 labels: 
  app.kubernetes.io/part-of: jerney
spec:
 podSelector:
  matchLabels:
   app.kubernetes.io/name: jerney-db
 policyTypes:
  - Ingress
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app.kuberenetes.io/name: jerney-backend
    ports:
     - port: 5432
       protocol: TCP
#network policy to allow traffic from frontend to backend TO
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: jerney-backend -allow-frontend only
 namespace: jerney
spec:
 podSelector:
  matchLabels:
    app.kuberenetes.io/name: jerney-backend
 policyTypes:
  - Ingress
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app.kuberenetes.io/name: jerney-frontend
    ports:
     - port: 5000
       protocol: TCP
